# MedVision-NLP

./: .dockerignore  .gitattributes  .gitignore  DESIGN.md  Dockerfile  HANDOFF_SCHEMA.json  README.md  common.py  dvc.yaml  evaluate.py  final_patch.diff  main.py  output.csv  output_train_neg.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  temp_freeze.txt  test_db.py  train.py  train_transformer.py  utils.py
backend/: common.py  dvc.yaml  evaluate_models.py  main.py  pyproject.toml  requirements.txt  test_genai.py  test_retrieval.py  train.py  train_transformer.py  upload_model.py  utils.py
backend/api/: routes.py
backend/core/: config.py  dataset.py  prompts.py  rate_limiter.py
backend/core/architectures/: dual_stream_ner.py
backend/data/knowledge/: abbreviations.json
backend/notebooks/: kaggle-training-medvision-nlp.ipynb  kaggle_training.ipynb
backend/schemas/: knowledge.py  predict.py
backend/scripts/: deploy_to_hf.py  generate_evidently_report.py  ingest_knowledge.py  ingest_textbooks.py  upload_db_to_hf.py  validate_markdown_chunks.py
backend/scripts/data_preparation/: build_unified_dataset.py  check_leakage.py  download_hf.py  eda.py  eda_phase1.py  finetune_bert.py  generate_iob_tags.py  generate_tesseract_dataset.py  image_preprocessing.py  preprocess_nlp.py  preprocess_ocr.py  stream_a_vision.py  stream_b_nlp.py
backend/services/: knowledge_service.py  llm_service.py  model_service.py  ocr_service.py
backend/tests/: test_api.py  test_common.py  test_knowledge_service.py  test_llm_evals.py  test_llm_service.py
(+84 files in other folders)
