[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks/"]
cache-dir = ".ruff_cache"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
